@@ -52,6 +52,7 @@ Additions:
      - ecore_wl_registry_get()
      - Add #ifdef __cplusplus to Ecore_Wayland.h so C++ programs can link to
        and use the API.
+     - Add support for double and triple click.
     * ecore_evas:
      - ecore_evas_window_profile_supported_get()
      - ecore_evas_window_profile_set()
