@@ -1,3 +1,7 @@
+2013-04-10  Rafael Antognolli
+
+        * Ecore: Add support for double and triple click on Wayland.
+
 2013-04-10 Tom Hacohen (Tasn) Yakov Goldberg
         * Evas textblock : Added split cursor for BiDi text
 
